tests/compile-fail/integration__integration__timeline_arg0__wrong_lang.snap
---
source: tests/integration/timeline_arg0.rs
expression: stderr
---
error: unknown ECL Timeline instruction or function 'eclOnly'
  ┌─ <input>:3:5
  │
3 │     eclOnly(0, 3, 3);
  │     ^^^^^^^ not found in this scope
  │
  = there is a 'eclOnly' defined in ECL

error: unknown ECL instruction or function 'timelineOnly'
  ┌─ <input>:7:5
  │
7 │     timelineOnly(0, 3, 3);
  │     ^^^^^^^^^^^^ not found in this scope
  │
  = there is a 'timelineOnly' defined in ECL Timeline


